# sqlpygen3

./: README.rst  environment.yml  pyproject.toml
examples/: example1.py
src/sqlpygen/: ast.py  cli.py  codegen.py  errors.py  language_server.py  parse_tree.py  tree_sitter_bindings.py
src/sqlpygen/templates/: sql_test_sqlite3.py.jinja2  sqlite3.jinja2  sqlite3.py.jinja2
tree-sitter-sqlpygen/: grammar.js
tree-sitter-sqlpygen/queries/: highlights.scm
tree-sitter-sqlpygen/src/: grammar.json  node-types.json  parser.c
tree-sitter-sqlpygen/test/corpus/: module.txt  query1.txt  query2.txt  query3.txt  schema1.txt  schema2.txt
